# DocNotary_nhomC

./: .env.example  .gitignore  README.md  app.py  hardhat.config.ts  package-lock.json  requirements.txt  tsconfig.json
backend_api/: ipfs_service.py  main.py
certichain-frontend/: .env.example  README_FRONTEND_ONLY.md  index.html  package-lock.json  package.json
certichain-frontend/src/: App.jsx  index.css
certichain-frontend/src/context/: BackendContext.jsx  DemoContext.jsx  TransactionContext.jsx  Web3Context.jsx
certichain-frontend/src/contracts/: DocumentNotary.json  index.js
certichain-frontend/src/hooks/: useCertificates.js  useContractEvents.js  useIssuerManagement.js  useNotary.js
certichain-frontend/src/pages/: CertificateDetailPage.jsx  CertificatesPage.jsx  DashboardPage.jsx  DemoFlowPage.jsx  IssueCertificatePage.jsx  IssuerManagementPage.jsx  LandingPage.jsx  MyCertificatesPage.jsx  NotarizePage.jsx  ReissuePage.jsx  TransactionLogPage.jsx  VerifyBatchPage.jsx  VerifyCertificatePage.jsx
contracts/: CertificateRegistry.sol  DocumentNotary.sol
merkle_tree/: Cargo.toml
merkle_tree/src/: lib.rs  main.rs
output/: batch_record.json
src/: App.jsx
src/context/: Web3Context.jsx
src/pages/: BackendLabPage.jsx  CertificateDetailPage.jsx  CertificatesPage.jsx  DashboardPage.jsx  TransactionLogPage.jsx  VerifyBatchPage.jsx  VerifyCertificatePage.jsx
typechain-types/: CertificateRegistry.ts  DocumentNotary.ts  hardhat.d.ts  index.ts
typechain-types/factories/: CertificateRegistry__factory.ts  DocumentNotary__factory.ts  index.ts
(+11 files in other folders)
